# mcp-device-gateway

./: .env.example  .gitignore  LICENSE  MCP_CAPABILITIES.md  MCP_REGRESSION_CHECKLIST.md  MCP_SURFACE_QUICKREF.md  PLAYBOOK.md  README.md  ROADMAP.md  VISION.md  build-exe.bat  devices.example.yaml  devices.production.example.yaml  entrypoint.py  mcp-device-gateway.spec  pyproject.toml  release.bat  start-mcp-device-gateway.bat
.github/: copilot-instructions.md
src/mcp_device_gateway/: config.py  security.py  server.py  ssh_client.py
tests/: test_command_resolution_and_batch.py  test_config_validation.py  test_device_profile_metadata.py  test_file_tools.py  test_protocol_v11_features.py  test_security_guards.py  test_server_config_monitor.py  test_template_categories.py  test_template_recommendation.py
