[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-device-gateway"
version = "0.1.2"
description = "MCP server for embedded device SSH/SFTP operations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp[cli]>=1.12.4",
  "paramiko>=3.4.0",
  "pydantic>=2.8.0",
  "PyYAML>=6.0.1"
]

[project.scripts]
mcp-device-gateway = "mcp_device_gateway.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
